--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/BlueGuy
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/UI
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -238,9 +238,11 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -250,6 +252,9 @@ RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP.Battery_BP
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer.WBP_FlashlightTimer
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_D.T_Ground_Grass_D;
@@ -535,6 +540,41 @@ ProceduralCylinderToolProperties.Shape=True
 ProceduralCylinderToolProperties.Positioning=True
 ProceduralTorusToolProperties.Shape=True
 ProceduralTorusToolProperties.Positioning=True
+Battery_BP_C.Tick=True
+Battery_BP_C.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WBP_FlashlightTimer_C.Appearance=True
+WBP_FlashlightTimer_C.Input=True
+WBP_FlashlightTimer_C.Interaction=True
+WBP_FlashlightTimer_C.Designer=True
+WBP_FlashlightTimer_C.Performance=True
+WBP_FlashlightTimer_C.Layout=True
+WBP_FlashlightTimer_C.Behavior=True
+WBP_FlashlightTimer_C.Render Transform=True
+WBP_FlashlightTimer_C.Localization=True
+WBP_FlashlightTimer_C.Accessibility=True
+WBP_FlashlightTimer_C.Rendering=True
+WBP_FlashlightTimer_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1657,27 +1697,31 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/StarterContent/GraingerBrick
-MRUItem1=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/FirstPerson/Blueprints/Items/Notes/Note
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
-MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem6=/Game/GraingerBob/Animations/Running_1_
-MRUItem7=/Game/GraingerBob/Animations/Idle
-MRUItem8=/Game/GraingerBob/grainger_bob_PhysicsAsset
-MRUItem9=/Game/GraingerBob/grainger_bob_Skeleton
-MRUItem10=/Game/GraingerBob/grainger_bob
-MRUItem11=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
+MRUItem0=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem2=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/StarterContent/GraingerBrick
+MRUItem5=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
+MRUItem6=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem8=/Game/GraingerBob/Animations/Running_1_
+MRUItem9=/Game/GraingerBob/Animations/Idle
+MRUItem10=/Game/GraingerBob/grainger_bob_PhysicsAsset
+MRUItem11=/Game/GraingerBob/grainger_bob_Skeleton
+MRUItem12=/Game/GraingerBob/grainger_bob
+MRUItem13=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
 /Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP.Flashlight_BP=0
 /Game/FirstPerson/Blueprints/Items/Notes/Note.Note=0
-/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=0
 /Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=0
 /Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP.Drink_BP=0
 /Game/StarterContent/GraingerBrick.GraingerBrick=1
+/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP.Battery_BP=0
+/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer.WBP_FlashlightTimer=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1822,6 +1866,14 @@ StaticMeshComponent="\"Object\" "
 MeshMergingSettingsObject="\"Object\" "
 ProceduralCylinderToolProperties="\"Object\" "
 ProceduralTorusToolProperties="\"Object\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+WBP_FlashlightTimer_C="\"Object\" "
+UserWidget="\"Object\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1963,6 +2015,11 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.SpawnLocations
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.SpawnLocations
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.SpawnLocations
 Drink_BP_C=
+K2Node=PropertyWrapper.DefaultValueCategory.SpawnLocations
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.SpawnLocations
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.SpawnLocations
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.SpawnLocations
+K2Node_InputKey=PropertyWrapper.DefaultValueCategory.SpawnLocations
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2135,4 +2192,100 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[WidgetTemplatesExpanded]
+Common=False
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
